[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"

serde = { version = "1.0.106", features = ["derive"] }

serde_json = "1.0"

sha2 = "0.10.0"

secp256k1 = { version = "0.24.0", features = ["rand", "bitcoin_hashes"] }

rand = "0.8.5"
